@@ -1,5 +1,11 @@
 2004-01-10  Bruno Haible  <bruno@clisp.org>
 
+	* hello-c++-kde/admin: New directory, from KDE 3.1.4.
+	* hello-c++-kde/auto*.sh: Don't create/remove the contents of the
+	admin subdirectory.
+
+2004-01-10  Bruno Haible  <bruno@clisp.org>
+
 	* hello-c/*, hello-c-gnome/*, hello-objc/*, hello-objc-gnome/*,
 	hello-c++/*, hello-c++-gnome/*, hello-c++-kde/*: Use the autoconf
 	infrastructure from gettext-0.13.1, not 0.12.1.
